attempted to fix bug on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -157,8 +157,8 @@ p.personalPageInfo{
 }
 p.teamDescription{
   text-align: center;
-  padding-right:150px;
-  padding-left:150px;
+  padding-right: 7%;;
+  padding-left: 7%;
 
 }
 figure {
